<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <!--    <data>-->
    <!--        <variable-->
    <!--            name=""-->
    <!--            type="" />-->
    <!--    </data>-->

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        tools:context=".nyschools.ui.views.DetailsFragment">

        <LinearLayout
            android:id="@+id/mLinearLayoutContainerSubItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            android:padding="16dp"
            android:paddingTop="25dp"
            android:paddingBottom="25dp">

            <TextView
                android:id="@+id/tvReceivedSchoolName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingEnd="16dp"
                android:text="@string/received_school_name"
                android:textColor="#555"
                android:textSize="18sp"
                android:visibility="gone"
                tools:ignore="RtlSymmetry" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/mTextViewCriticalReadingAvgScoreLabel"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:paddingEnd="16dp"
                    android:text="@string/critical_readingAve_label"
                    android:textColor="#555"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/mTextViewCriticalReadingAvgScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/critical_readingAve_text"
                    android:textColor="#555"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/mTextViewMathAvgScoreLabel"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:paddingEnd="16dp"
                    android:text="@string/math_score"
                    android:textColor="#555"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/mTextViewMathAvgScore"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/math_score"
                    android:textColor="#555"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/mTextViewWritingAvgScoreLabel"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:paddingEnd="16dp"
                    android:text="@string/writing"
                    android:textColor="#555"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/mTextViewWritingAvgScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/critical_readingAve_text"
                    android:textColor="#555"
                    android:visibility="gone" />
            </LinearLayout>

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/navBack"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:text="Hi B-Nav"
                android:textAlignment="center"
                app:itemTextColor="@color/design_default_color_error" />

        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
